Fix wrong margin in responsive

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,6 @@ header{
 }
 
 .menu{
-  margin-right: 10px;
   transition: 0.4s;
 }
 
@@ -147,6 +146,7 @@ header{
 }
 
 #services-section{
+  width: 100%;
   background: #489FB5;
 }
 
@@ -214,7 +214,6 @@ header{
     right: -100%;
     z-index: 0;
     text-align: center;
-    padding: 100px 0;
     transition: 0.9s;
   }
 
